# tiger

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py  train_semantic_id.py
configs/: base.yaml
notebooks/: 01 - Validate Dataset.ipynb  02 - Setup sentencetransformer.ipynb  03- Train RQ-VAE.ipynb  04 - Evaluate codebook usage.ipynb  05 - Sequences to Semantic ID.ipynb
scripts/: requirements-dev.txt  requirements-nb.txt
tests/: test_ngrams.py
tiger/: config.py  logger.py
tiger/data/: amazon.py  sentence_embedding.py
tiger/distributions/: gumbel.py
tiger/models/: encoder.py  enums.py  kmeans.py  loss.py  ngram.py  normalize.py  quantize.py  rqvae.py  semantic_id.py  sentence_encoder.py  t5.py
tiger/sentences/: encoder.py
