[project]
name = "tiger"
version = "1.0.0"
description = "LLM x RecSys hybrid with Semantic IDs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.2",
    "matplotlib>=3.10.8",
    "pandas[parquet]>=3.0.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
    "wandb>=0.25.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[tool.ruff]
line-length = 110
target-version = "py314"
exclude = ["scripts"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins for errors when shadowing python builtins
    "B",   # flake8-bugbear for finding likely bugs and design problems
    "B9",  # flake8-bugbear for additional opinionated warnings
    "C4",  # flake8-comprehensions for writing better list/set/dict comprehensions
    "C90", # mccabe for cyclomatic complexity problems (see max-complexity below)
    "D",   # flake8-doctsrings. Checks for docstring conventions
    "E",   # pycodestyle check for pep8 style convention errors
    "F",   # flake8 error codes
    "I",   # import sorting
    "N",   # pep8-naming checks for naming conventions
    "S",   # flake8-bandit for finding common security issues
    "W",   # pycodestyle to check for pep8 style convention warnings
]

ignore = [
    "D1",   # Missing docstrings
    "N812", # lowercase imported as non lowercase
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"**/test*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.2", "ty>=0.0.18"]
nb = ["ipywidgets>=8.1.8", "jupyterlab>=4.5.4"]
